arm_sve2/output/output-10095.err
ms2/regblock_ms2.cpp: In function ‘void CONV(std::vector<float>, std::vector<float>, std::vector<float>, int, int, int, int, int, int, int, int, int, int, int, int, int, int, int, int, int, int, int)’:
ms2/regblock_ms2.cpp:28:25: error: ‘ij0’ was not declared in this scope; did you mean ‘ijo’?
   28 |                         ij0 = ij + stride_h * p;
      |                         ^~~
      |                         ijo
ms2/regblock_ms2.cpp:31:29: error: ‘ii0’ was not declared in this scope; did you mean ‘iio’?
   31 |                             ii0 = ii + stride_w * q;
      |                             ^~~
      |                             iio
/usr/bin/ld: cannot find regblock_ms2.o: No such file or directory
collect2: error: ld returned 1 exit status
rm: cannot remove 'regblock_ms2.o': No such file or directory
rm: cannot remove 'conv_layer': No such file or directory
